# LLKLiveAssist

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: AssistCore.cpp.9C96499DDC969D7A.idx  AssistCore.h.7EDBDAC52248C6C2.idx  AssistRuntime.cpp.20E80E1D4C3AAD1F.idx  AssistRuntime.h.9DC7C79D24C92968.idx  BiliClientAssist.cpp.0CDB230B782AB886.idx  BiliClientAssist.cpp.FA70A4696DE7C712.idx  BiliClientAssist.h.06CF38D28C99EB3A.idx  BiliClientAssist.h.924DC4A87CB8DEBB.idx  BiliData.cpp.9EC2DFEB77317060.idx  BiliData.h.998AE4D0ABB12059.idx  BroadcastAssist.cpp.95A44D1C484AA3BD.idx  BroadcastAssist.cpp.C1A06BEECEDB43BD.idx  BroadcastAssist.h.028994BC8AE98FBC.idx  BroadcastAssist.h.5F0ED7C9E6AA7E52.idx  EncryptionUtils.h.147B3F83C439A429.idx  EncryptionUtils.h.B50C3075D73B42A4.idx  GSoVITSAssist.cpp.D300B4595C5D7D70.idx  GSoVITSAssist.h.3EEFB6B75FEFF46A.idx  GSoVITSModel.h.FF78694160EA42E8.idx  HttpRequest.cpp.3A6FA62E82EEA9AA.idx  HttpRequest.cpp.CF2972B5422A4D53.idx  HttpRequest.h.FCADE8AEC543ED62.idx  JsonParser.cpp.17DC68A0802B032B.idx  JsonParser.cpp.9BDA8DAE4CDC5E26.idx  JsonParser.h.FE5116F8B512F618.idx  Main.cpp.1837361AD98C5AB8.idx  Main.cpp.BDBEDB60D84BF22C.idx  NetUtils.h.5F59E3FFB4CB930C.idx  PeriodicTask.cpp.21CC3EEBDDFA854C.idx  PeriodicTask.cpp.9F1B9E5154D041BF.idx  PeriodicTask.h.10E2E12E6F65654D.idx  PeriodicTask.h.AFDC735BDB490D18.idx  PluginBase.h.2B022F82323C89B1.idx  PluginBase.h.C9B8682E7E75D9BC.idx  ProtoPacket.h.5B68C477009E3F69.idx  ThreadPool.cpp.1E2D012AD5CA5372.idx  ThreadPool.cpp.49ED6E1FEEB45613.idx  ThreadPool.h.69C57D702DE6C4A1.idx  WebsocketClient.cpp.B0B7BE052BAD18F9.idx  WebsocketClient.cpp.F869BFF7E0EBFD25.idx  (+3040 more)
Config/: BiliClientAssistSetting.json  GSoVITSAssistSetting.json  RuntimeSetting.json
Config/Model/: InferSetting.json  Model.json  ModelSetting.json
GSoVITSCore/: Placeholder
LLKLiveAssist/: CMakeLists.txt
LLKLiveAssist/AssistRuntime/: AssistRuntime.cpp  AssistRuntime.h  AssistRuntime.qrc  CMakeLists.txt  Main.cpp
LLKLiveAssist/AssistRuntime/Config/: GUIConfig.cpp  GUIConfig.h
LLKLiveAssist/AssistRuntime/GUI/: AssistRuntimeWindow.cpp  AssistRuntimeWindow.h
LLKLiveAssist/AssistRuntime/GUI/ModelView/: GsovitsTableView.cpp  GsovitsTableView.h  GsovitsTableViewModel.cpp  GsovitsTableViewModel.h  LogModel.cpp  LogModel.h
LLKLiveAssist/AssistRuntime/GUI/Page/: BasePage.cpp  BasePage.h  HomePage.cpp  HomePage.h  LogWidget.cpp  LogWidget.h  ModelPage.cpp  ModelPage.h  SettingPage.cpp  SettingPage.h
LLKLiveAssist/AssistRuntime/GUI/Panel/: ConsoleDilogPanel.cpp  ConsoleDilogPanel.h  TaskConfigPanel.cpp  TaskConfigPanel.h  TaskPanel.cpp  TaskPanel.h
LLKLiveAssist/AssistRuntime/GUI/Theme/: LLKStyle.h
LLKLiveAssist/AssistRuntime/GUI/Widget/: LLKWidget.h
LLKLiveAssist/AssistRuntime/GUI/Widgets/: BiliConfigWidget.cpp  BiliConfigWidget.h  LLKAnimationCard.cpp  LLKAnimationCard.h  LLKPopularCard.cpp  LLKPopularCard.h  LLKPopularCardFloater.cpp  LLKPopularCardFloater.h  LLKUrlCard.cpp  LLKUrlCard.h  ModelConfigContainer.cpp  ModelConfigContainer.h  SovitsConfigWidget.cpp  SovitsConfigWidget.h  TTSConfigWidget.cpp  TTSConfigWidget.h
LLKLiveAssist/AssistRuntime/GUI/Widgets/private/: LLKPopularCardPrivate.cpp  LLKPopularCardPrivate.h
LLKLiveAssist/AssistRuntime/Resource/: LLKLiveAssist.rc
LLKLiveAssist/AssistRuntime/Runtime/: AssistRuntime.cpp  AssistRuntime.h
LLKLiveAssist/AssistRuntime/Utils/: SignalEmitter.cpp  SignalEmitter.h  UrlImageLoader.cpp  UrlImageLoader.h
LLKLiveAssist/LLKAssitCore/: CMakeLists.txt
LLKLiveAssist/LLKAssitCore/include/: AudioAssist.h  BiliClientAssist.h  BroadcastAssist.h  GSoVITSAssist.h  ModuleManager.h  PluginBase.h
LLKLiveAssist/LLKAssitCore/include/Core/: ErrorCode.h  FileSystem.h  Library.h  PeriodicTask.h  ThreadPool.h  logger.h
LLKLiveAssist/LLKAssitCore/include/Data/: BiliData.h  GSoVITSModel.h  JsonParser.h  ProtoPacket.h
LLKLiveAssist/LLKAssitCore/include/Net/: HttpRequest.h  TCPClient.h  WebsocketClient.h
LLKLiveAssist/LLKAssitCore/include/Utils/: EncryptionUtils.h
LLKLiveAssist/LLKAssitCore/source/: AudioAssist.cpp  BiliClientAssist.cpp  BroadcastAssist.cpp  GSoVITSAssist.cpp  ModuleManager.cpp
LLKLiveAssist/LLKAssitCore/source/Core/: ErrorCode.cpp  PeriodicTask.cpp  ThreadPool.cpp  WindowsFileSystem.cpp  logger.cpp
LLKLiveAssist/LLKAssitCore/source/Data/: JsonParser.cpp
LLKLiveAssist/LLKAssitCore/source/Net/: HttpRequest.cpp  TCPClient.cpp  WebsocketClient.cpp
